abstract, intro,  and GD tweaks

--- a/paper/noisy_kids.tex
+++ b/paper/noisy_kids.tex
@@ -16,7 +16,8 @@
 
 
 \abstract{
-When we process a speaker's utterance, we use more than the information in the speech signal. Because linguistic communication is inherently noisy---sometimes we misspeak, sometimes we mishear---adult listeners integrate bottom-up cues from speech perception with top-down expectations about what speakers are likely to say. Further, in line with the predictions of ideal observer models, adults flexibly adapt how much they rely on these two kinds of cues in proportion to their changing reliability. Do children also process language in the same flexible, expectation-based way? We presented 4- and 5-year-old children with ambiguous utterances afforded two different interpretations depending on whether they privileged perceptual input or linguistic expectations. We then manipulated both the reliability of the perceptual input and of their speaker-expectations. As predicted by a noisy channel model of speech processing, children flexibly adapted their reliance on each of these cues as it changed in reliability.}
+% When we process a speaker's utterance, we use more than the information in the speech signal. 
+Because linguistic communication is inherently noisy and uncertain, adult language comprehenders integrate bottom-up cues from speech perception with top-down expectations about what speakers are likely to say. Further, in line with the predictions of ideal observer models, comprehenders flexibly adapt how much they rely on these two kinds of cues in proportion to their changing reliability. Do children also show evidence of flexible, expectation-based language comprehension? We presented 4- and 5-year-old children with ambiguous utterances that afforded two different interpretations, depending on whether they privileged perceptual input or linguistic expectations. Across two experiments, we manipulated the reliability of both their perceptual input and their expectations about the speaker's intended meaning. As predicted by noisy channel models of speech processing, children flexibly adjusted their interpretations as cues changed in reliability.}
 
 \keywords{Language processing, noisy channel, cognitive development}
 
@@ -46,11 +47,11 @@ Word Count:
 
 Imagine Bob hears Alice say ``I had carrots and bees for dinner.'' Perhaps she visited an exotic restaurant, and he should follow up and ask how they tasted. Or perhaps he misheard her or she misspoke, and she actually ate \emph{peas}. To interpret Alice's utterance, Bob has to integrate perceptual information from her speech with his expectations about both what words usually go with ``carrots'' and ``dinner'' and also what foods people usually eat. Modern statistical language processing systems operate using a body of theory based on this idea---that language is a \emph{noisy channel}, and that Bob can correct for perceptual errors using linguistic expectations about what Alice was likely trying to say \cite{jelinek1976, shannon1948}. 
 
-Noisy channel principles provide a powerful framework for explaining how the human language processing system operates in complex and uncertain real-time communicative situations \cite{clayards2008, levy2008, jaeger2010, kleinschmidt2015}. On this view of language, comprehenders integrate prior expectations with perceptual data; and they do so probabilistically, weighting each according to its reliability \cite{ernst2002, jacobs1999}. In one demonstration of this kind of integration, \citeA{gibson2013} presented participants with semantically implausible sentences (e.g., ``The mother gave the candle the daughter''), which could have been produced by small typographical errors in otherwise much more plausible sentences (e.g., the omission of the word ``to''). Adult comprehenders were able to correct these errors, and critically corrected them at higher rates when they had reason to believe that the communicative channel was noisy (and hence the perceptual signal was unreliable). Conversely, they corrected these errors at lower rates when they believed they were in a ``silly'' context where many of the sentences they read were similarly implausible. Together, these results suggested a flexible weighting on the perceptual signal---channel noise---and prior expectations---speaker plausibility. 
+Noisy channel principles provide a powerful framework for explaining how the human language processing system operates in complex and uncertain real-time communicative situations \cite{clayards2008, levy2008, jaeger2010, kleinschmidt2015}. On this view of language, comprehenders integrate prior expectations with perceptual data; and they do so probabilistically, weighting each according to its reliability \cite{ernst2002, jacobs1999}. In one demonstration of this kind of integration, \citeA{gibson2013} presented participants with semantically implausible sentences (e.g., ``The mother gave the candle the daughter''), which could have been produced by small typographical errors in otherwise much more plausible sentences (e.g., the omission of the word ``to''). Adult comprehenders were able to correct these errors, and critically corrected them at higher rates when they had reason to believe that the communicative channel was noisy (and hence the perceptual signal was unreliable). Conversely, they corrected these errors at lower rates when they believed they were in a ``silly'' context where many of the sentences they read were similarly implausible. Together, these results suggested a flexible weighting of information from the perceptual signal and from speaker expectations. 
 
-Do children also process language in the same flexible, expectation-based way? Prior research on this topic is mixed. On one hand, infants and toddlers already make use of speakers' social and pragmatic cues to reference to shape their expectations about linguistic meaning \cite{clark2009, carpenter1998}. And preschoolers show evidence of encoding stable features like the reliability of individual speakers, a clear prerequisite for forming communicative expectations \cite{koenig2004, harris2012}. On the other hand, children at the same ages sometimes show striking deficits in inferring speakers' intended meaning---and revising incorrect expectations about meaning---in cases where syntax \cite{trueswell1999} and semantics \cite{noveck2001} are ambiguous. These failures are seen, however, in complex contexts that were designed to test the development of other abilities; none were designed to make a direct and straightforward test of expectation-based integration in the absence of other processing demands. Our current experiments thus attempt to make such a test of whether young children flexibly integrate expectations about speakers with the noise in a communicative channel. 
+Do children also process language in the same flexible, expectation-based way? Though to our knowledge no experiments directly test this question, relevant prior work is mixed. On one hand, infants and toddlers already make use of speakers' social and pragmatic cues to reference to shape their expectations about linguistic meaning \cite{clark2009, carpenter1998}. And preschoolers show evidence of encoding stable features like the reliability of individual speakers, a clear prerequisite for forming communicative expectations \cite{koenig2004, harris2012}. On the other hand, children at the same ages sometimes show striking deficits in inferring speakers' intended meaning---and revising incorrect expectations about meaning---in cases where syntax \cite{trueswell1999} and semantics \cite{noveck2001} are ambiguous. These failures are seen, however, in complex contexts that were designed to test the development of other abilities; none were intended to make a direct and straightforward test of expectation-based integration in the absence of other processing demands. Our current experiments thus attempt to make such a test. 
 
-We created a paradigm that allowed independent manipulation of both expectations about a speaker's plausibility and perceptual noise. We introduced four- and five-year-old children (and adults) to either a plausible or implausible speaker, who initially uttered unambiguous sentences like ``my cat has three little [kittens/hammers]'' (Figure \ref{fig:exposure}). We then asked participants to resolve the intended meaning for ambiguous sentences such as the ``bees/peas'' example above, which could either be the product of a mishearing or phonological error, or could convey implausible content (Figure \ref{fig:test}). We predicted that, if children are able to integrate speaker expectations and channel noise, then their interpretations should be a product of both of these. In Experiment 1, we provide a first test of this hypothesis by manipulating speaker plausibility. In Experiment 2, we replicate the findings of Experiment 1 and cross these with a manipulation of channel noise. The results of these two experiments show that children, like adults, flexibly trade off between information sources in language comprehension in response to their reliability.
+We created a paradigm that allowed independent manipulation of both expectations about a speaker's plausibility and perceptual noise. We introduced four- and five-year-old children (and, as a control group, adults) to either a plausible or implausible speaker, who initially uttered unambiguous sentences like ``my cat has three little [kittens/hammers]'' (Figure \ref{fig:exposure}). We then asked participants to resolve the intended meaning for ambiguous sentences such as the ``bees/peas'' example above, which could either be the product of a mishearing or phonological error, or could convey implausible content (Figure \ref{fig:test}). We predicted that, if children are able to integrate speaker expectations and channel noise, then their interpretations should be a product of both of these. In Experiment 1, we provide a first test of this hypothesis by manipulating speaker plausibility. In Experiment 2, we replicate the findings of Experiment 1 and cross these with a manipulation of channel noise. The results of these two experiments show that children, like adults, flexibly trade off between information sources in language comprehension in response to their reliability.
 
 \begin{figure}[tb]
      \centering
@@ -138,14 +139,14 @@ Finally, one alternative explanation for the difference between Speaker conditio
 
 \section{General Discussion}
 
-When we use language to communicate, we are doing more than processing the sounds hear; we are trying to infer the speaker's intended meaning \cite{clark1996}. Because of the noise inherent in linguistic communication, a lot of work for this inference is done by our expectations about what speakers are likely to say \cite{grice1975, frank2012}. But how much should listeners rely on the acoustic signal and how much should they rely on their expectations? Ideal observer models of this kind of cue integration predict that each cue should be weighted in proportion to its reliability \cite{jacobs1999, ernst2002}. This prediction is borne out in adult listeners across domains in language processing from phonology to syntax \cite<e.g.,>{gibson2013, mcclelland2006, kleinschmidt2015}. The experiments in this paper provide the first evidence that this adaptive expectation-based language processing is already available to 4-5 year old children. Not only do preschoolers combine their expectations about a speaker's likely utterance with the speech they are hearing, they flexibly re-weigh their reliance on each as they develop stronger expectations about the speaker and as the speech signal changes in clarity.
+When we use language to communicate, we are doing more than processing the sounds hear; we are trying to infer the speaker's intended meaning \cite{clark1996}. Because of the noise and ambiguity inherent in linguistic communication, our expectations about what speakers are likely to say play an important role in resolving interpretive ambiguities \cite{grice1975, frank2012}. But how much should listeners rely on the acoustic signal and how much should they rely on their expectations? Ideal observer models of this kind of cue integration predict that each cue should be weighted in proportion to its reliability \cite{jacobs1999, ernst2002}. This prediction is borne out in adult listeners across domains in language processing from phonology to syntax \cite<e.g.,>{gibson2013, mcclelland2006, kleinschmidt2015}. The experiments in this paper provide evidence that this adaptive expectation-based language processing is already available to 4--5 year old children. Not only do preschoolers combine their expectations about a speaker's likely utterance with the speech they are hearing, they flexibly re-weigh their reliance on each as they develop stronger expectations about the speaker and as the speech signal changes in clarity.
 
-Interestingly, while the effect size of this adaptation was nearly identical in both children and adults, their baseline reliance on perceptual vs. linguistic cues was not. Overall, children hearing the same ambiguous utterances relied more on their linguistic expectations. Because of the greater noise inherent in young children's perceptual processing systems, the same acoustic stimulus may effectively less reliable for children than adults
-\cite{neuman1983, lyons2011}. On this basis, the noisy channel framework makes a clear prediction about integration in atypical populations. Children whose acoustic processing is impaired, (e.g. children with cochlear implants) should rely relatively more on their expectations, whereas children with impaired language models (e.g. children with specific language impairment) should rely relatively more the acoustic signal.
+Intriguingly, while the size of the adaptation effect was nearly identical in both children and adults, their baseline reliance on perceptual vs. linguistic cues was not: Children relied more on their linguistic expectations than the perceptual signal. Because of the greater noise inherent in young children's perceptual processing systems, the same acoustic stimulus may effectively be less reliable for children than adults \cite{neuman1983, lyons2011}. Relatedly, the noisy channel framework makes a clear prediction about integration in atypical populations: Children whose acoustic processing is impaired, (e.g., with cochlear implants) should rely relatively more on their expectations, whereas children with impaired higher-level linguistic expectations (e.g., children with specific language impairment) should rely more the acoustic signal.
 
-This same phenomenon begins to offer an explanation for why children appear to integrate information in an adult-like way in some language processing tasks but not others. A priori, we would predict that children's should use their model-based expectations when they have reliable models in a given domain. Thus, children should and do integrate when the relevant models are of speech sounds, speakers, or semantic plausibility \cite<e.g.,>{clark2009, creel2012, harris2012}. On the other hand, children fail in cases where the relevant models are of quantifier semantics and complex syntactic constructions \cite<e.g.,>{trueswell1999, noveck2001}. However, based on prior evidence that children's understanding of quantifiers is limited, as is their exposure to relative clauses, this is exactly the result a noisy channel framework for speech processing would predict  \cite{barner2011, montag2015}.
+One puzzle of the broader literature on the development of language comprehension is that children appear to integrate information in an adult-like way in some language processing tasks but not others. A priori, we would predict that children's use of higher-level expectations should be relative to the reliability of their model of the relevant domain. Thus, children should---and do---integrate expectations when the relevant models are over speech sounds, speakers, or semantic plausibility \cite<e.g.,>{clark2009, creel2012, harris2012}. On the other hand, children tend to fail in cases where the relevant models include difficult linguistic content like quantifier semantics or complex syntactic constructions \cite<e.g.,>{trueswell1999, noveck2001}. 
+% However, based on prior evidence that children's understanding of quantifiers is limited, as is their exposure to relative clauses, this is exactly the result a noisy channel framework for speech processing would predict  \cite{barner2011, montag2015}.
 
-The noisy channel framework thus offers a potential unifying framework for understanding both children's and adults' language processing systems, as well as how one develops from the other. The processing that unfolds is well characterized by the interaction between two models: one of perception, and one of expectation. But what is the content of these models? One possibility is that expectations are fundamentally about speakers, and that linguistic communication is essentially pragmatic all the way down. Alternatively, these models could be linguistic in content, about the distributions of words, referents, and their mutual predictability. We hope that the paradigm we have developed here will be a powerful tool for helping to resolve this fundamental tension. 
+Our work here suggests that the noisy channel framework offers a route to understanding both children's and adults' language processing, as well as how one develops from the other. Within this framework, processing is characterized by the interaction between two models: one of perception, and one of expectation. The content and level of description for these models are outstanding questions, however. One possibility is that expectations are fundamentally about speakers, and that linguistic communication is essentially pragmatic all the way down. Alternatively, these models could be linguistic in content, about the distributions of words, referents, and their mutual predictability. We hope that the paradigm we have developed here will be a tool for helping to resolve this fundamental tension. 
 
 \section{Acknowledgments}
 
